--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -14,3 +14,17 @@ jobs:
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
       - uses: haskell-actions/hlint-scan@c81f3176108e60bbce2d5a223e9297a8406deb92
+  ormolu:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install Ormolu
+        run: |
+          curl -sSL https://get-ghcup.haskell.org | sh -s -- -y
+          ~/.ghcup/bin/ghcup install ormolu
+
+      - name: Check Ormolu formatting
+        run: |
+          ~/.ghcup/bin/ormolu --mode check $(find . -name '*.hs')
