--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -20,6 +20,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Cache Stack dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.stack
+            ~/.ghcup
+            ~/.local/bin/ormolu
+          key: ${{ runner.os }}-stack-${{ hashFiles('**/stack.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-stack-
+
+      - name: Install Stack
+        run: |
+          curl -sSL https://get.haskellstack.org/ | sh
+
       - name: Install Ormolu
         run: |
           stack install ormolu
