trying to implement tests in GH actions

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -49,7 +49,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          curl -sSL https://get.haskellstack.org/ | sh
+          if ! command -v stack &> /dev/null; then
+            curl -sSL https://get.haskellstack.org/ | sh
+          fi
 
       - name: Build and run tests
         run: |
