--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -52,6 +52,6 @@ jobs:
 
       - name: Build and run tests
         run: |
-          mkdir runnable
-          make lab2
+          mkdir -p runnable
+          make -C . lab2
           ./runnable/lab2
