--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -49,9 +49,9 @@ jobs:
           if ! command -v stack &> /dev/null; then
             curl -sSL https://get.haskellstack.org/ | sh
           fi
-
       - name: Build and run tests
         run: |
           mkdir -p runnable
-          make -C . lab2
+          chmod -R 755 runnable
+          make -f ./makefile lab2
           ./runnable/lab2
