--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -59,11 +59,9 @@ jobs:
         with:
           path: |
             ~/.stack
-            ~/.ghcup
-            ~/.local/bin/ormolu
-          key: ${{ runner.os }}-stack-${{ hashFiles('**/stack.yaml') }}
+          key: ${{ runner.os }}-stack-build-${{ hashFiles('**/stack.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-stack-
+            ${{ runner.os }}-stack-build-
       - name: Build and run tests
         run: |
           mkdir -p runnable
