may be better action time

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -51,6 +51,7 @@ jobs:
         with:
           path: |
             ~/.stack
+            ~/.local/bin
           key: ${{ runner.os }}-stack-build-${{ hashFiles('**/stack.yaml') }}
           restore-keys: |
             ${{ runner.os }}-stack-build-
