--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -52,6 +52,10 @@ jobs:
           path: |
             ~/.stack
             ~/.local/bin
+            ~/.cargo/bin
+            ~/.config/composer/vendor/bin
+            /usr/local/.ghcup/bin
+            ~/.dotnet/tools
           key: ${{ runner.os }}-stack-build-${{ hashFiles('**/stack.yaml') }}
           restore-keys: |
             ${{ runner.os }}-stack-build-
