unit test module with ci/cd integreation

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -70,3 +70,5 @@ jobs:
           mkdir -p runnable
           make -f makefile -C . lab2
           ./runnable/lab2
+          make -f makefile -C . lab3-test
+          ./runnable/lab3-test
